# libF

./: CMakeLists.txt  README.md  conanfile.py
include/libF/: libF.h
src/: libF.cpp
